--- a/applications/dashboard/scss/admin.scss
+++ b/applications/dashboard/scss/admin.scss
@@ -13,6 +13,7 @@
 @import 'src/mixins';
 
 @import 'maps/vanillicon';
+@import 'src/icons';
 @import 'maps/vendorSubset';
 @import 'maps/dashboard';
 @import 'maps/extensions';
