--- a/applications/dashboard/scss/src/_analytics.scss
+++ b/applications/dashboard/scss/src/_analytics.scss
@@ -43,9 +43,10 @@
 
 // Bookmark Icons
 .bookmark {
+  @extend .reverse-link;
+
   svg {
     transition: transform .1s;
-    fill: $grey;
     width: to-rem(18);
   }
 
