--- a/applications/dashboard/scss/src/_footer.scss
+++ b/applications/dashboard/scss/src/_footer.scss
@@ -44,12 +44,12 @@
 
 .footer-logo-powered {
   position: relative;
+  top: -.5rem;
   display: block;
 }
 
 .footer-logo {
-  padding-top: .375rem;
-  padding-bottom: .375rem;
+  padding-top: .5rem;
   opacity: .3;
 }
 
