--- a/applications/dashboard/scss/src/_forms.scss
+++ b/applications/dashboard/scss/src/_forms.scss
@@ -117,11 +117,7 @@ form {
   padding-bottom: 1rem;
   margin-bottom: 0;
   border-bottom: $border-width dotted #e7e8e9;
-
-  &:first-child {
-    border-top: $border-width solid $border-color;
-    @include has-top-border;
-  }
+  border-bottom: $border-width dotted #e7e8e9;
 
   > .no-grid {
     @extend .row-padding-left;
@@ -216,7 +212,6 @@ label,
 }
 
 .label-wrap {
-
   min-width: 0;
   overflow: hidden;
 
@@ -248,7 +243,7 @@ label,
 .input-wrap-multiple {
   display: flex;
 
-  > *:last-child {
+  > *:not(:first-child) {
     margin-left: $spacer / 2;
   }
 }
@@ -549,6 +544,7 @@ select + select {
 .label-selector {
   @extend .row;
   @include list-reset;
+  margin-bottom: $spacer / 2;
 
   label {
     padding-left: 0;
@@ -598,10 +594,7 @@ select + select {
 
       &:hover {
         text-decoration: none;
-
-        svg {
-          fill: $brand-primary;
-        }
+        color: $brand-primary;
       }
     }
   }
@@ -620,11 +613,10 @@ select + select {
 
   .selected {
     display: none;
-
+    color: $brand-success;
     svg {
       display: block;
       width: 84px;
-      fill: $brand-success;
     }
   }
 
@@ -677,12 +669,12 @@ select + select {
 
     svg {
       display: block;
-      fill: $white;
     }
 
     a {
-      &:hover svg {
-        fill: $navbar-active-link-active-bg;
+      color: $white;
+      &:hover {
+        color: $navbar-active-link-active-bg;
       }
     }
   }
@@ -721,6 +713,7 @@ select + select {
   position: relative;
   overflow: hidden;
   margin-bottom: $spacer / 2;
+  color: rgba(85,90,98,.27);
 
   .mobile-frame {
     position: relative;
@@ -729,7 +722,6 @@ select + select {
 
   svg {
     display: block;
-    fill: rgba(85,90,98,.27);
   }
 
   .image-wrap {
@@ -817,10 +809,6 @@ select + select {
 
   .search-icon-search-wrap {
     left: 0;
-
-    svg {
-      opacity: 1;
-    }
   }
 
   .search-info {
