--- a/applications/dashboard/scss/src/_navbar.scss
+++ b/applications/dashboard/scss/src/_navbar.scss
@@ -177,10 +177,10 @@
 // Doesn't currently exist. Was for the ? icon in the original mockups.
 .nav-icons {
   margin-right: $spacer;
+  color: $white;
 
   svg {
     display: block;
-    fill: $white;
     height: (($font-size-xs * $line-height-lg) + ($font-size-base * $line-height-lg)) - (2 * $border-width);
   }
 
