--- a/applications/dashboard/scss/src/_alert.scss
+++ b/applications/dashboard/scss/src/_alert.scss
@@ -1,6 +1,6 @@
 // Alerts
 //
-// Alerts are warning/info/danger/success messages that generally appear at the top of a page. Alerts use twbs's scss.
+// Alerts are warning/info/danger/success messages that generally appear at the top of a page.
 //
 // Styleguide 11.
 
@@ -19,3 +19,34 @@
 // </div>
 //
 // Styleguide 11.1.
+
+.alert {
+  padding: $alert-padding;
+  border: $alert-border-width solid transparent;
+
+  // Improve alignment and spacing of inner content
+  > p,
+  > ul {
+    margin-bottom: 0;
+  }
+  > p + p {
+    margin-top: 5px;
+  }
+}
+
+// Alternate styles
+//
+// Generate contextual modifier classes for colorizing the alert.
+
+.alert-success {
+  @include alert-variant($alert-success-bg, $alert-success-border, $alert-success-text);
+}
+.alert-info {
+  @include alert-variant($alert-info-bg, $alert-info-border, $alert-info-text);
+}
+.alert-warning {
+  @include alert-variant($alert-warning-bg, $alert-warning-border, $alert-warning-text);
+}
+.alert-danger {
+  @include alert-variant($alert-danger-bg, $alert-danger-border, $alert-danger-text);
+}
