--- a/applications/dashboard/scss/src/_media.scss
+++ b/applications/dashboard/scss/src/_media.scss
@@ -10,11 +10,11 @@
 //
 // The media item.
 //
+// PHP rendering helper: The MediaItemModule
+//
 // .media-callout - Used for callouts.
 // .media-addon - Used for addons.
 // .media-sm - Used for user cells in tables.
-//
-// PHP rendering helper: The MediaItemModule
 //
 // Markup:
 // <div class="media {{modifier_class}}">
@@ -99,6 +99,14 @@
       @include image-wrap($spacer * 3.5, $spacer * 3.5);
     }
   }
+
+  .media-body {
+    max-width: 540px;
+  }
+
+  .media-right {
+    margin-left: auto;
+  }
 }
 
 .media-addon,
@@ -112,7 +120,6 @@
     margin-bottom: $spacer / 4;
     margin-top: 0;
   }
-
 }
 
 .media-options {
@@ -260,7 +267,7 @@
 .media-sm {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
 
   .media-left {
     padding-right: $spacer / 2;
