--- a/applications/dashboard/scss/src/_variables.scss
+++ b/applications/dashboard/scss/src/_variables.scss
@@ -164,7 +164,7 @@ $nav-pills-panel-border-radius:             $border-radius 0 0 $border-radius;
 
 $navbar-height:                             to-rem(60);
 $navbar-short-height:                       3rem;
-$navbar-active-link-active-bg:              #0cb0f8;
+$navbar-active-link-active-bg:              lighten($brand-primary, 7%);
 $navbar-link-color:                         lighten($navbar-active-link-active-bg, 40%);
 $navbar-border-color:                       rgba(0,0,0,.125);
 
