--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -919,8 +919,8 @@
   content: "\f1b9";
 }
 
-.icon, .btn-icon, .search-wrap .search-icon-wrap,
-.icon svg, .btn-icon svg, .search-wrap .search-icon-wrap svg {
+.icon, .btn-icon, .bookmark, .search-wrap .search-icon-wrap,
+.icon svg, .btn-icon svg, .bookmark svg, .search-wrap .search-icon-wrap svg {
   vertical-align: middle;
   display: inline-block;
   fill: currentColor;
@@ -4901,25 +4901,9 @@ output {
   top: 0;
 }
 
-.bookmark svg {
-  transition: -webkit-transform .1s;
-  transition: transform .1s;
-  width: 1.125rem;
-}
-
-.bookmark:hover svg, .bookmark:focus svg {
-  -webkit-transform: rotate(30deg);
-  transform: rotate(30deg);
-}
-
 .bookmarked svg {
   -webkit-transform: rotate(30deg);
   transform: rotate(30deg);
-}
-
-.bookmarked:hover svg, .bookmarked:focus svg {
-  -webkit-transform: rotate(0deg);
-  transform: rotate(0deg);
 }
 
 .analytics-widget-move {
@@ -5064,7 +5048,7 @@ button::-moz-focus-inner {
   margin-left: 0.5625rem;
 }
 
-.btn-icon + .btn-icon, .search-wrap .search-icon-wrap + .btn-icon, .search-wrap .btn-icon + .search-icon-wrap, .search-wrap .search-icon-wrap + .search-icon-wrap {
+.btn-icon + .btn-icon, .bookmark + .btn-icon, .search-wrap .search-icon-wrap + .btn-icon, .btn-icon + .bookmark, .bookmark + .bookmark, .search-wrap .search-icon-wrap + .bookmark, .search-wrap .btn-icon + .search-icon-wrap, .search-wrap .bookmark + .search-icon-wrap, .search-wrap .search-icon-wrap + .search-icon-wrap {
   margin-left: 0;
 }
 
@@ -5159,14 +5143,17 @@ fieldset[disabled] a.Button {
   background-color: #fff;
 }
 
-.btn-link, .btn-icon, .search-wrap .search-icon-wrap {
+.btn-link, .btn-icon, .bookmark, .search-wrap .search-icon-wrap {
   font-weight: normal;
   color: #0291db;
   border-radius: 0;
   border-width: 0;
 }
 
-.btn-link, .btn-icon, .search-wrap .search-icon-wrap, .btn-link:active, .btn-icon:active, .search-wrap .search-icon-wrap:active, .btn-link.active, .active.btn-icon, .file-upload input:focus ~ .btn-icon.file-upload-choose, .file-upload .search-wrap input:focus ~ .file-upload-choose.search-icon-wrap, .search-wrap .file-upload input:focus ~ .file-upload-choose.search-icon-wrap,
+.btn-link, .btn-icon, .bookmark, .search-wrap .search-icon-wrap, .btn-link:active, .btn-icon:active, .bookmark:active, .search-wrap .search-icon-wrap:active, .btn-link.active, .active.btn-icon, .active.bookmark, .file-upload input:focus ~ .bookmark.file-upload-choose,
+.file-upload input:focus ~ .bookmark.file-upload-browse,
+.file-upload input:hover ~ .bookmark.file-upload-choose,
+.file-upload input:hover ~ .bookmark.file-upload-browse, .file-upload input:focus ~ .btn-icon.file-upload-choose, .file-upload .search-wrap input:focus ~ .file-upload-choose.search-icon-wrap, .search-wrap .file-upload input:focus ~ .file-upload-choose.search-icon-wrap,
 .file-upload input:focus ~ .btn-icon.file-upload-browse,
 .file-upload .search-wrap input:focus ~ .file-upload-browse.search-icon-wrap, .search-wrap
 .file-upload input:focus ~ .file-upload-browse.search-icon-wrap,
@@ -5178,30 +5165,30 @@ fieldset[disabled] a.Button {
 .file-upload input:hover ~ .file-upload-browse.search-icon-wrap, .search-wrap .active.search-icon-wrap, .file-upload input:focus ~ .btn-link.file-upload-choose,
 .file-upload input:focus ~ .btn-link.file-upload-browse,
 .file-upload input:hover ~ .btn-link.file-upload-choose,
-.file-upload input:hover ~ .btn-link.file-upload-browse, .btn-link:disabled, .btn-icon:disabled, .search-wrap .search-icon-wrap:disabled {
+.file-upload input:hover ~ .btn-link.file-upload-browse, .btn-link:disabled, .btn-icon:disabled, .bookmark:disabled, .search-wrap .search-icon-wrap:disabled {
   background-color: transparent;
 }
 
-.btn-link, .btn-icon, .search-wrap .search-icon-wrap, .btn-link:focus, .btn-icon:focus, .search-wrap .search-icon-wrap:focus, .btn-link:active, .btn-icon:active, .search-wrap .search-icon-wrap:active {
+.btn-link, .btn-icon, .bookmark, .search-wrap .search-icon-wrap, .btn-link:focus, .btn-icon:focus, .bookmark:focus, .search-wrap .search-icon-wrap:focus, .btn-link:active, .btn-icon:active, .bookmark:active, .search-wrap .search-icon-wrap:active {
   border-color: transparent;
 }
 
-.btn-link:hover, .btn-icon:hover, .search-wrap .search-icon-wrap:hover {
+.btn-link:hover, .btn-icon:hover, .bookmark:hover, .search-wrap .search-icon-wrap:hover {
   border-color: transparent;
 }
 
-.btn-link:focus, .btn-icon:focus, .search-wrap .search-icon-wrap:focus, .btn-link:hover, .btn-icon:hover, .search-wrap .search-icon-wrap:hover {
+.btn-link:focus, .btn-icon:focus, .bookmark:focus, .search-wrap .search-icon-wrap:focus, .btn-link:hover, .btn-icon:hover, .bookmark:hover, .search-wrap .search-icon-wrap:hover {
   color: #015f8f;
   text-decoration: underline;
   background-color: transparent;
 }
 
-.btn-link:disabled:focus, .btn-icon:disabled:focus, .search-wrap .search-icon-wrap:disabled:focus, .btn-link:disabled:hover, .btn-icon:disabled:hover, .search-wrap .search-icon-wrap:disabled:hover {
+.btn-link:disabled:focus, .btn-icon:disabled:focus, .bookmark:disabled:focus, .search-wrap .search-icon-wrap:disabled:focus, .btn-link:disabled:hover, .btn-icon:disabled:hover, .bookmark:disabled:hover, .search-wrap .search-icon-wrap:disabled:hover {
   color: #ededed;
   text-decoration: none;
 }
 
-.btn-icon, .search-wrap .search-icon-wrap {
+.btn-icon, .bookmark, .search-wrap .search-icon-wrap {
   padding: 0.1875rem;
   margin: 0;
   margin-left: 1rem;
@@ -5211,31 +5198,32 @@ fieldset[disabled] a.Button {
   color: #555a62;
 }
 
-.btn-icon:first-child, .search-wrap .search-icon-wrap:first-child {
+.btn-icon:first-child, .bookmark:first-child, .search-wrap .search-icon-wrap:first-child {
   margin-left: 0;
 }
 
-.btn-icon svg, .search-wrap .search-icon-wrap svg {
+.btn-icon svg, .bookmark svg, .search-wrap .search-icon-wrap svg {
   height: 1.5rem;
   width: 1.5rem;
 }
 
-.btn-icon:hover, .search-wrap .search-icon-wrap:hover {
+.btn-icon:hover, .bookmark:hover, .search-wrap .search-icon-wrap:hover {
   color: #555a62;
   opacity: 1;
 }
 
-.btn-icon.disabled, .search-wrap .disabled.search-icon-wrap {
+.btn-icon.disabled, .disabled.bookmark, .search-wrap .disabled.search-icon-wrap {
   border: none;
 }
 
-.btn-icon.btn-icon-sm svg, .search-wrap .btn-icon-sm.search-icon-wrap svg {
+.btn-icon.btn-icon-sm svg, .bookmark svg, .search-wrap .btn-icon-sm.search-icon-wrap svg, .search-wrap .search-icon-wrap.bookmark svg {
   height: 1.125rem;
   width: 1.125rem;
 }
 
-a.btn-icon, .search-wrap a.search-icon-wrap,
+a.btn-icon, a.bookmark, .search-wrap a.search-icon-wrap,
 button.btn-icon,
+button.bookmark,
 .search-wrap button.search-icon-wrap {
   opacity: 0.7;
 }
@@ -5336,7 +5324,7 @@ button.btn-icon,
   margin-left: -0.0625rem;
 }
 
-.btn-group .btn-icon + .btn-icon, .btn-group .search-wrap .search-icon-wrap + .btn-icon, .search-wrap .btn-group .search-icon-wrap + .btn-icon, .btn-group .search-wrap .btn-icon + .search-icon-wrap, .search-wrap .btn-group .btn-icon + .search-icon-wrap, .btn-group .search-wrap .search-icon-wrap + .search-icon-wrap, .search-wrap .btn-group .search-icon-wrap + .search-icon-wrap {
+.btn-group .btn-icon + .btn-icon, .btn-group .bookmark + .btn-icon, .btn-group .search-wrap .search-icon-wrap + .btn-icon, .search-wrap .btn-group .search-icon-wrap + .btn-icon, .btn-group .btn-icon + .bookmark, .btn-group .bookmark + .bookmark, .btn-group .search-wrap .search-icon-wrap + .bookmark, .search-wrap .btn-group .search-icon-wrap + .bookmark, .btn-group .search-wrap .btn-icon + .search-icon-wrap, .search-wrap .btn-group .btn-icon + .search-icon-wrap, .btn-group .search-wrap .bookmark + .search-icon-wrap, .search-wrap .btn-group .bookmark + .search-icon-wrap, .btn-group .search-wrap .search-icon-wrap + .search-icon-wrap, .search-wrap .btn-group .search-icon-wrap + .search-icon-wrap {
   margin-left: 0.375rem;
 }
 
@@ -5457,7 +5445,7 @@ button.btn-icon,
   background-color: #f8f9fc;
 }
 
-.card .list-group-item .icon, .card .list-group-item .btn-icon, .card .list-group-item .search-wrap .search-icon-wrap, .search-wrap .card .list-group-item .search-icon-wrap {
+.card .list-group-item .icon, .card .list-group-item .btn-icon, .card .list-group-item .bookmark, .card .list-group-item .search-wrap .search-icon-wrap, .search-wrap .card .list-group-item .search-icon-wrap {
   position: absolute;
   right: 1rem;
   top: 1rem;
@@ -6176,11 +6164,11 @@ button.btn-icon,
   padding: 0.375rem 0;
 }
 
-.dropdown-menu .icon, .ac_results .icon, .dropdown-menu .btn-icon, .ac_results .btn-icon, .dropdown-menu .search-wrap .search-icon-wrap, .search-wrap .dropdown-menu .search-icon-wrap, .ac_results .search-wrap .search-icon-wrap, .search-wrap .ac_results .search-icon-wrap {
+.dropdown-menu .icon, .ac_results .icon, .dropdown-menu .btn-icon, .ac_results .btn-icon, .dropdown-menu .bookmark, .ac_results .bookmark, .dropdown-menu .search-wrap .search-icon-wrap, .search-wrap .dropdown-menu .search-icon-wrap, .ac_results .search-wrap .search-icon-wrap, .search-wrap .ac_results .search-icon-wrap {
   margin-right: 0.28125rem;
 }
 
-.dropdown-menu svg.icon, .ac_results svg.icon, .dropdown-menu svg.btn-icon, .ac_results svg.btn-icon, .dropdown-menu .search-wrap svg.search-icon-wrap, .search-wrap .dropdown-menu svg.search-icon-wrap, .ac_results .search-wrap svg.search-icon-wrap, .search-wrap .ac_results svg.search-icon-wrap {
+.dropdown-menu svg.icon, .ac_results svg.icon, .dropdown-menu svg.btn-icon, .ac_results svg.btn-icon, .dropdown-menu svg.bookmark, .ac_results svg.bookmark, .dropdown-menu .search-wrap svg.search-icon-wrap, .search-wrap .dropdown-menu svg.search-icon-wrap, .ac_results .search-wrap svg.search-icon-wrap, .search-wrap .ac_results svg.search-icon-wrap {
   margin-top: -0.125rem;
 }
 
@@ -9146,11 +9134,11 @@ pre {
   padding: 0 .25rem;
 }
 
-.reverse-link, .bookmark, .label-selector .title a, .FeedItem h2 a, .FeedItem .analytics-widget-header .title a, .analytics-widget-header .FeedItem .title a {
+.reverse-link, .label-selector .title a, .FeedItem h2 a, .FeedItem .analytics-widget-header .title a, .analytics-widget-header .FeedItem .title a {
   color: #555a62;
 }
 
-.reverse-link:hover, .bookmark:hover, .label-selector .title a:hover, .FeedItem h2 a:hover, .FeedItem .analytics-widget-header .title a:hover, .analytics-widget-header .FeedItem .title a:hover {
+.reverse-link:hover, .label-selector .title a:hover, .FeedItem h2 a:hover, .FeedItem .analytics-widget-header .title a:hover, .analytics-widget-header .FeedItem .title a:hover {
   color: #0291db;
 }
 
@@ -9485,12 +9473,6 @@ strong,
   color: #555a62;
   padding: 0 0 18px;
   position: relative;
-  fill: #555a62;
-}
-
-.dd * {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .dd-list {
@@ -9531,7 +9513,7 @@ strong,
   position: absolute;
   top: 0;
   right: 0;
-  fill: rgba(85, 90, 98, 0.6);
+  color: #949aa2;
 }
 
 .dd-item .options .dropdown-toggle {
@@ -9554,7 +9536,7 @@ strong,
   cursor: -moz-grab;
   cursor: grab;
   line-height: 1;
-  fill: #e7e8e9;
+  color: #949aa2;
 }
 
 .dd-handle:hover {
@@ -9581,10 +9563,6 @@ strong,
   cursor: -webkit-grabbing;
   cursor: -moz-grabbing;
   cursor: grabbing;
-}
-
-.dd-dragel > .dd-item > .dd-handle {
-  fill: #555a62;
 }
 
 .dd-placeholder,
