--- a/applications/dashboard/scss/src/_forms.scss
+++ b/applications/dashboard/scss/src/_forms.scss
@@ -480,6 +480,12 @@ select.form-control {
   &::-ms-expand {
     opacity: 0;
   }
+
+  &:focus {
+    border-color: #66afe9;
+    outline: none;
+    @extend .active;
+  }
 }
 
 select + select {
